@@ -9,8 +9,8 @@ suppport is found.  Typical builds will be performed using:
     make
 
 If doing development work on OpenBSM with gcc, the following invocation of
-configure may be preferred in order to generate full compiler warnings and
-force the compile to fail if a warning is found:
+configure is preferred in order to generate full compiler warnings and force
+the compile to fail if a warning is found:
 
     CFLAGS="-Wall -Werror" ./configure
 
